--- a/templates/index.html
+++ b/templates/index.html
@@ -7,79 +7,155 @@
 <link rel="shortcut icon" href="{{ url_for('static', filename='unity.png') }}">
 
 <style>
+body{
+    font-size:1.5rem;
+    background-color: #F4F7FC;    
+}
+
+h5.card-title{
+    text-align:center;
+    font-size:1.5rem
+}
+
+p.card-text{
+    text-align:center;
+    font-size:3rem
+}
+
+.glyphicon-user, .glyphicon-stats, .glyphicon-phone {
+    color:white;
+    font-size: 15px;
+    padding: 10px;
+    background-color: #2469CE;    
+    border-radius:50%;    
+}
+
+.card{
+    border-radius: 0;
+    box-shadow: 0 2px 4px rgba(126,142,177,.12);
+}
+
 </style>
 {% endblock %}
 
 
 {% block title %}
-    Fortune 500 Diversity
+    Corporate D&I
 {% endblock %}
 
 
 {% block content %}
-    <div class="container-fluid" style="background-color: blue;">
-        <div class='row  bg-light' style="padding-bottom: 20px">
-            <a class="navbar-brand" href="/" style="padding-top: 20px; padding-left: 30px;">
-                <img src="{{ url_for('static', filename='unity.png') }}" height="30" class="d-inline-block align-center" alt="">
-            </a>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="jumbotron" style="padding: 10px 0px;margin-bottom: 10px; background-color: transparent; color: white;">
-                        <h1>Corporate Diversity & Inclusion</h1>
-                        <p class="lead">See what the biggest companies in the U.S. are doing to solve the problem of systemic racism in corporate america.</p>
-                    </div>
+
+<div class="container-fluid" style="background-color: #153D77; padding-bottom: 20px;">
+    <div class='row' style="padding-bottom: 20px;">
+        <a class="navbar-brand" href="/" style="padding-top: 20px; padding-left: 30px;">
+            <img src="{{ url_for('static', filename='unity.png') }}" height="30" class="d-inline-block align-center" alt="">                
+        </a>
+        <h3 style="margin-top:25px; color:white">Corporate Diversity & Inclusion</h3>
+    </div>
+</div>
+
+<div class="container-fluid" style="background-color: #153D77; padding-bottom: 100px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="jumbotron" style="padding: 10px 0px;margin-bottom: 10px; background-color: transparent; color: white;">
+                    <h1>Open Diversity Reporting</h1>
+                    <p class="lead">See what the biggest companies in the U.S. are doing to address issues of diversity and inclusion in corporate america.</p>
                 </div>
             </div>
         </div>
-    </div>             
-
-    <div class="container">
-        <br>
-        <div class="row">
-            <div class="col-md-12">
-                <h3>Data</h3>                
-                <table class="table table-bordered">
-                    <tr class="active">
-                        <th>Fortune 500 Rank</th>
-                        <th>Company</th>
-                        <th>Diversity Report</th>
-                        <th>Diversity Exec/VP</th>
-                        <th>Diversity Landing Page</th>
-                    </tr>
-                    {% for rownum,row in data.iterrows() %}
-                    <tr>    
-                        <td>{{row.iloc[0]}}</td>
-                        <td>{{row.iloc[1]}}</td>
-
-                        {% if (row.iloc[2]) != "N" %}
-                            <td><a href='{{row.iloc[3]}}' target="_blank">{{row.iloc[2]}}</a></td>
-                        {% else %}
-                            <td style="text-align:center"></td>
-                        {% endif %}
-
-                        {% if (row.iloc[4]) == "Y" %}
-                            <td style="text-align:center"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
-                        {% elif (row.iloc[4]) == "N" %}
-                            <td style="text-align:center"></td>              
-                        {% else %}
-                            <td style="text-align:center">{{row.iloc[4]}}</td>
-                        {% endif %}
-
-                        {% if (row.iloc[5]) != "N" %}
-                            <td><a href='{{row.iloc[5]}}' target="_blank">{{row.iloc[5]}}</a></td>
-                        {% else %}
-                            <td></td>
-                        {% endif %}
-
-                    </tr>
-                    {% endfor %}
-                </table>                
-            </div>        
-        </div>
-
     </div>
+</div>       
+
+<div class="container" style="margin-top: -90px;">
+    <br>
+
+    <div class="row">
+        <div class="col-sm-4">
+        <div class="card">
+            <div class="card-body">
+            <h5 class="card-title">Diversity Reports <span class="glyphicon glyphicon-stats pull-right" aria-hidden="true"></span></h5>
+            <p class="card-text">{{reports}}</p>
+                <div class="progress">
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 75%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="col-sm-4">
+        <div class="card">
+            <div class="card-body">
+            <h5 class="card-title">Diversity Leaders <span class="glyphicon glyphicon-user pull-right" aria-hidden="true"></span></h5>
+            <p class="card-text">{{leaders}}</p>
+                <div class="progress">
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 90%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>            
+            </div>
+        </div>
+        </div>
+        <div class="col-sm-4">
+        <div class="card">
+            <div class="card-body">
+            <h5 class="card-title">Diversity Landing Pages <span class="glyphicon glyphicon-phone pull-right" aria-hidden="true"></span></h5>
+            <p class="card-text">{{pages}}</p>
+                <div class="progress">
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 89%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>            
+            </div>
+        </div>
+        </div>          
+    </div>
+
+    <br>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-body">
+                    <table class="table table-bordered">
+                        <tr class="active">
+                            <th>Fortune 500 Rank</th>
+                            <th>Company</th>
+                            <th>Diversity Report</th>
+                            <th>Diversity Exec/VP</th>
+                            <th>Diversity Landing Page</th>
+                        </tr>
+                        {% for rownum,row in data.iterrows() %}
+                        <tr>    
+                            <td>{{row.iloc[0]}}</td>
+                            <td>{{row.iloc[1]}}</td>
+    
+                            {% if (row.iloc[2]) != "N" %}
+                                <td><a href='{{row.iloc[3]}}' target="_blank">{{row.iloc[2]}}</a></td>
+                            {% else %}
+                                <td style="text-align:center"></td>
+                            {% endif %}
+    
+                            {% if (row.iloc[4]) == "Y" %}
+                                <td style="text-align:center"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>
+                            {% elif (row.iloc[4]) == "N" %}
+                                <td style="text-align:center"></td>              
+                            {% else %}
+                                <td style="text-align:center">{{row.iloc[4]}}</td>
+                            {% endif %}
+    
+                            {% if (row.iloc[5]) != "N" %}
+                                <td><a href='{{row.iloc[5]}}' target="_blank">Link</a></td>
+                            {% else %}
+                                <td></td>
+                            {% endif %}
+    
+                        </tr>
+                        {% endfor %}
+                    </table>   
+                </div>
+            </div>             
+        </div>        
+    </div>
+
+    <br><br>
+</div>
 {% endblock %}
 
 
