--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@ p.card-text{
         <a class="navbar-brand" href="/" style="padding-top: 20px; padding-left: 30px;">
             <img src="{{ url_for('static', filename='unity.png') }}" height="30" class="d-inline-block align-center" alt="">                
         </a>
-        <h3 style="margin-top:25px; color:white">Corporate Diversity & Inclusion</h3>
+        <h3 style="margin-top:25px; color:white">Corporate Diversity Data</h3>
     </div>
 </div>
 
@@ -60,8 +60,8 @@ p.card-text{
         <div class="row">
             <div class="col-md-12">
                 <div class="jumbotron" style="padding: 10px 0px;margin-bottom: 10px; background-color: transparent; color: white;">
-                    <h1>Open Diversity Reporting</h1>
-                    <p class="lead">See what the biggest companies in the U.S. are doing to address issues of diversity and inclusion in corporate america.</p>
+                    <h1>Open Corporate Diversity Data</h1>
+                    <p class="lead">See what the biggest companies in the U.S. are doing to address issues of diversity and inclusion in "Corporate America".</p>
                 </div>
             </div>
         </div>
