--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,17 @@
 {% extends 'bootstrap/base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
-{% import "bootstrap/google.html" as google %}
 
-{% block scripts %}
-  {{super()}}
-  {{google.uanalytics('G-167FMM217P')}}
+{% block head %}
+{{ super() }}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-167FMM217P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-167FMM217P');
+</script>
 {% endblock %}
 
 
