--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,8 @@ p.card-text{
 .card{
     border-radius: 0;
     box-shadow: 0 2px 4px rgba(126,142,177,.12);
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 </style>
